// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormattedDuration renders correctly 1`] = `
<div
  className="time"
>
  59s
</div>
`;

exports[`FormattedDuration renders correctly 1.5 years 1`] = `
<div
  className="time"
>
  1y, 181d, 0m
</div>
`;

exports[`FormattedDuration renders correctly slightly greater than 1 year 1`] = `
<div
  className="time"
>
  1y, 0m
</div>
`;

exports[`FormattedDuration renders correctly when to is 0 or undefined 1`] = `
<div
  className="time"
>
  3y, 2h, 29m
</div>
`;
